@@ -13,6 +13,8 @@ CVS HEAD (2007-04-03):
 * Fixed A68k items in the New menu being shown even when A68k is not installed.
 * Don't grab the keyboard globally (stealing key presses from other apps) in the
   Errors&Warnings pane, only override the Ctrl+C and Ctrl+Ins accelerators.
+* Fixed adding to the recent file list getting confused by changes to the list
+  from other KTIGCC instances.
 
 
 KTIGCC 1.06 (2006-11-25):
